# kubectl-manifest-clean

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/: __init__.py
cmd/manifest_clean/: __init__.py  main.py
deploy/krew/: plugin.yaml
doc/: USAGE.md
entrypoint/: __init__.py
entrypoint/manifest_clean/: __init__.py  main.py
pkg/: __init__.py
pkg/manifest_clean/: __init__.py  cli.py  diff.py  io.py  normalize.py
tests/: __init__.py  test_cli.py  test_diff.py  test_io.py  test_normalize.py
